--- a/examples/sfu-videochat/app/build.gradle
+++ b/examples/sfu-videochat/app/build.gradle
@@ -1,15 +1,25 @@
 apply plugin: 'com.android.application'
 
+Properties properties = new Properties()
+File localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        properties.load(reader)
+    }
+}
+
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.ntt.ecl.webrtc.sample_sfu_videochat"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'SKYWAY_API_KEY', "\"${properties.getProperty('SKYWAY_API_KEY')}\""
+        buildConfigField 'String', 'SKYWAY_DOMAIN', "\"${properties.getProperty('SKYWAY_DOMAIN')}\""
     }
     buildTypes {
         release {
@@ -24,13 +34,13 @@ android {
 }
 
 dependencies {
-    implementation (name:'skyway',ext:'aar')
+    implementation (name:'skyway', ext:'aar')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
 
 repositories{
