--- a/examples/sfu-videochat/app/src/main/AndroidManifest.xml
+++ b/examples/sfu-videochat/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name="com.ntt.ecl.webrtc.sample_sfu_videochat.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_video_chat"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
